@@ -1,5 +1,7 @@
 import java.io.*;
 import java.net.*;
+import java.util.Properties;
+
 import org.json.JSONObject;
 
 import jakarta.servlet.ServletException;
@@ -12,13 +14,30 @@ import jakarta.servlet.http.HttpSession;
 @WebServlet("/GoogleOAuthServlet")
 public class GoogleOAuthServlet extends HttpServlet {
 
-    private static final String CLIENT_ID = "193964380377-4325skno0dmpg1ka3bpq09se8j8ig5pm.apps.googleusercontent.com";
-    private static final String CLIENT_SECRET = "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";
-    private static final String REDIRECT_URI = "http://localhost:8080/LifeLens/GoogleOAuthServlet";
-
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
 
+        // 🔐 Load secrets from config.properties (real path)
+        Properties props = new Properties();
+        String fullPath = getServletContext().getRealPath("/WEB-INF/config.properties");
+
+        try (FileInputStream fis = new FileInputStream(fullPath)) {
+            props.load(fis);
+        } catch (IOException e) {
+            response.getWriter().println("❌ Error loading config: " + e.getMessage());
+            return;
+        }
+
+        String CLIENT_ID = props.getProperty("CLIENT_ID");
+        String CLIENT_SECRET = props.getProperty("CLIENT_SECRET");
+        String REDIRECT_URI = props.getProperty("REDIRECT_URI");
+
+        // ✅ Debug prints
+        System.out.println("CLIENT_ID: " + CLIENT_ID);
+        System.out.println("CLIENT_SECRET: " + CLIENT_SECRET);
+        System.out.println("REDIRECT_URI: " + REDIRECT_URI);
+
+        // 🔍 Get code from query param
         String code = request.getParameter("code");
 
         if (code == null || code.isEmpty()) {
@@ -34,19 +53,16 @@ public class GoogleOAuthServlet extends HttpServlet {
                         "&redirect_uri=" + URLEncoder.encode(REDIRECT_URI, "UTF-8") +
                         "&grant_type=authorization_code";
 
-        URI tokenURI = URI.create(tokenEndpoint);
-        URL url = tokenURI.toURL();
-
+        URL url = new URL(tokenEndpoint);
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("POST");
         conn.setDoOutput(true);
         conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
         conn.getOutputStream().write(params.getBytes("UTF-8"));
 
-        // Check for error in token response
         int responseCode = conn.getResponseCode();
         if (responseCode != HttpURLConnection.HTTP_OK) {
-            response.getWriter().println("Failed to exchange code for token. HTTP response code: " + responseCode);
+            response.getWriter().println("❌ Failed to exchange code for token. HTTP response code: " + responseCode);
             return;
         }
 
@@ -61,21 +77,19 @@ public class GoogleOAuthServlet extends HttpServlet {
         JSONObject json = new JSONObject(responseBody.toString());
 
         if (!json.has("access_token")) {
-            response.getWriter().println("Access token not found in the token response.");
+            response.getWriter().println("❌ Access token not found in the token response.");
             return;
         }
 
         String accessToken = json.getString("access_token");
 
         // Step 2: Get user info
-        URI userInfoURI = URI.create("https://www.googleapis.com/oauth2/v2/userinfo?access_token=" + accessToken);
-        URL userInfoURL = userInfoURI.toURL();
-
+        URL userInfoURL = new URL("https://www.googleapis.com/oauth2/v2/userinfo?access_token=" + accessToken);
         HttpURLConnection userConn = (HttpURLConnection) userInfoURL.openConnection();
         userConn.setRequestMethod("GET");
 
         if (userConn.getResponseCode() != HttpURLConnection.HTTP_OK) {
-            response.getWriter().println("Failed to fetch user info.");
+            response.getWriter().println("❌ Failed to fetch user info.");
             return;
         }
 
@@ -89,15 +103,13 @@ public class GoogleOAuthServlet extends HttpServlet {
         JSONObject userJSON = new JSONObject(userInfo.toString());
         String name = userJSON.optString("name", "Unknown");
         String email = userJSON.optString("email", "Not provided");
-        String picture = userJSON.optString("picture", ""); 
+        String picture = userJSON.optString("picture", "");
 
-       
         HttpSession session = request.getSession();
         session.setAttribute("userName", name);
         session.setAttribute("userEmail", email);
-        session.setAttribute("userPicture", picture); 
+        session.setAttribute("userPicture", picture);
 
-       
         response.sendRedirect("SelectSurveyLoggedIN.jsp");
     }
 }
